--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <style>
         @viewport {
             width: device-width;
-            zoom: 1.0;
+            zoom: 3.0;
         }
 
         body {
@@ -43,6 +43,7 @@
 </head>
 
 <body>
+    asdf
     <div id="main">
         <div id="mainTitle"></div>
         <div id="Content"></div>
