--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html>
-
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <head>
     <style>
-        @viewport {
-            width: device-width;
-            zoom: 3.0;
-        }
+      
 
         body {
             background-color: black;
@@ -25,15 +22,24 @@
             height: 400px;
         }
 
+        .check{
+            width: 20px;
+            height: 20px;
+            display: block;
+            float: left;
+            margin-right: 10px;
+        }
+
         h1 {
             color: red;
             margin: 20px 0px 0px 0px;
-            font-size: 20;
+            font-size: 25;
 
         }
 
         p {
-            margin: 5px 0px 0px 0px;
+            margin: 5px 50px 50px 0px;
+            font-size: 22;
         }
 
         .taskElement {
@@ -43,7 +49,6 @@
 </head>
 
 <body>
-    asdf
     <div id="main">
         <div id="mainTitle"></div>
         <div id="Content"></div>
@@ -127,15 +132,22 @@
     const tasks = JSON.parse(jsonData.value);
     const shuffledTasks = tasks.sort(() => 0.5 - Math.random());
     let selectedTasks = shuffledTasks.slice(0, 5);
-    selectedTasks.forEach(task => {
+    selectedTasks.forEach(task => {       
+           
+
         var taskElement = document.createElement("div");
         taskElement.setAttribute("class", "taskElement");
+
+        var check = document.createElement("input");
+        check.setAttribute("type", "checkbox");
+        check.setAttribute("class", "check");
         var tag = document.createElement("h1");
         var text = document.createTextNode(task.title);
         tag.appendChild(text);
         var body = document.createElement("p");
         var text2 = document.createTextNode(task.body);
         body.appendChild(text2);
+        taskElement.appendChild(check);
         taskElement.appendChild(tag);
         taskElement.appendChild(body);
 
