--- a/index.html
+++ b/index.html
@@ -58,72 +58,56 @@
 <data class="json-data" value='
 [
 {
-    "title":"Outside",
-    "body":"Play table tennis and hit the ball 10 times in a row"
-},
-{
-    "title":"Chill house",
-    "body":"Roll a double number with the 2 dice"
-},
-{
-    "title":"Laundry",
-    "body":"Knock on the cajón 20 times"
-},
-{
-    "title":"Laundry",
-    "body":"Hang the clothes that are in the basket"
-},
-{
-    "title":"Outside",
-    "body":"Lie down on the hammock and swing for 1 minute"
-},
-{
-    "title":"Chicken’s door",
-    "body":"Recite the spell on the door"
-},
-{
-    "title":"Silent coworking",
-    "body":"Play 20 times the tambourine"
-},
-{
-    "title":"Silent coworking",
-    "body":"Separate the UNO cards by colour"
-},
-{
-    "title":"Call room",
-    "body":"Recite the lyrics of the song"
-},
-{
     "title":"Kitchen",
-    "body":"Count the bottle caps in the box one by one"
+    "body":"Play with the game console for 30 sec or score 100 points"
 },
 {
-    "title":"Kitchen",
-    "body":"Change oven trays to the other oven"
+    "title":"Game room",
+    "body":"Build a small Jenga tower"
 },
 {
-    "title":"Cafe",
-    "body":"Score 3 paper balls into the trash can"
+    "title":"Puff room",
+    "body":"Arrange or Dearrange puffs"
 },
 {
-    "title":"Living room",
-    "body":"Move all the stuff on the top drawer to the bottom one (or viceversa)"
+    "title":"Entrance - Outside",
+    "body":"Separate the UNO cards on the table by colour"
 },
 {
-    "title":"Living room",
-    "body":"Pick a table and sit on every chair, one by one"
+    "title":"Entrance - Outside",
+    "body":"Tap the balloon and keep it in the air for 15 secs"
 },
 {
-    "title":"Living room",
-    "body":"On the fireplace couch, arrange the pillows by color (or dearrange them)"
+    "title":"Outside",
+    "body":"Toss at least one ring around the peg"
 },
 {
-    "title":"Rosa’s room",
-    "body":"Write your full name on the DYMO machine"
+    "title":"Bar",
+    "body":"Move all the clothes to the dryer (or to the washing machine)"
 },
 {
-    "title":"Orchard",
-    "body":"Turn the lights on and off 20 times"
+    "title":"First floor",
+    "body":"Write something nice in the notebook on the corridor table"
+},
+{
+    "title":"Room number 5",
+    "body":"Recite the riddle on the door"
+},
+{
+    "title":"TV Room",
+    "body":"Chill on the couch for 30 sec"
+},
+{
+    "title":"TV Room",
+    "body":"Light up the candles on the balcony and blow them afterwards"
+},
+{
+    "title":"Coworking",
+    "body":"Bow 10 times to the Buddha"
+},
+{
+    "title":"Coworking",
+    "body":"Roll a double number with the two dice"
 }
 ]
 '></data>
