--- a/esp.html
+++ b/esp.html
@@ -58,56 +58,56 @@
 <data class="json-data" value='
 [
 {
-    "title":"Kitchen",
-    "body":"Play with the game console for 30 sec or score 100 points at tetris"
+    "title":"Cocina",
+    "body":"Juega con la consola durante 30 segundos o hasta que hagas 100 puntos en el tetris"
 },
 {
-    "title":"Game room",
-    "body":"Build a small Jenga tower"
+    "title":"Habitacion de juegos",
+    "body":"Contruye una torre pequeña con las piezas de Jenga"
 },
 {
-    "title":"Puff room",
-    "body":"Arrange or Dearrange puffs by color"
+    "title":"Habitacion de los Puffs",
+    "body":"Ordena o desordena los puffs por colores"
 },
 {
-    "title":"Entrance - Outside",
-    "body":"Separate the UNO cards on the table by colour"
+    "title":"Entrada - Fuera",
+    "body":"Ordena las cartas del UNO por color"
 },
 {
-    "title":"Entrance - Outside",
-    "body":"Tap the balloon and keep it in the air for 15 secs"
+    "title":"Entrada - Fuera",
+    "body":"Manten el globo en el aire dandole golpecitos durante 15 segundos"
 },
 {
-    "title":"Outside",
-    "body":"Toss at least one ring around the peg from 2 metres away"
+    "title":"Fuera",
+    "body":"Mete la anilla en pirindolo desde al menos 2 metros"
 },
 {
     "title":"Bar",
-    "body":"Move all the clothes to the dryer (or to the washing machine)"
+    "body":"Mueve toda la ropa de la lavadora a la secadora (o al reves)"
 },
 {
-    "title":"First floor",
-    "body":"Write something nice in the notebook on the corridor table"
+    "title":"Primera Planta",
+    "body":"Escribe algo bonito en el cuaderno de la mesa del pasillo"
 },
 {
-    "title":"Room number 5",
-    "body":"Recite the riddle on the door"
+    "title":"Habitacion numero 5",
+    "body":"Recita en voz alta el trabalenguas de la puerta"
 },
 {
-    "title":"TV Room",
-    "body":"Chill on the couch for 30 sec"
+    "title":"Habitacion de la TV",
+    "body":"Sientate en el sofa y relajate durante 30 segundos"
 },
 {
-    "title":"TV Room",
-    "body":"Light up the candles on the balcony and blow them afterwards"
-},
-{
-    "title":"Coworking",
-    "body":"Bow 10 times to the Buddha"
+    "title":"Habitacion de la TV",
+    "body":"Enciende todas las velas en el balcon y soplalas despues"
 },
 {
     "title":"Coworking",
-    "body":"Roll a double number with the two dice"
+    "body":"Arrodillate y haz 10 reverencias al Buda"
+},
+{
+    "title":"Coworking",
+    "body":"Tira los dados hasta que salga un numero doble"
 }
 ]
 '></data>
