--- a/esp.html
+++ b/esp.html
@@ -75,7 +75,7 @@
 },
 {
     "title":"Entrada - Fuera",
-    "body":"Manten el globo en el aire dandole golpecitos durante 15 segundos"
+    "body":"Manten el globo en el aire dandole al menos 15 golpecitos seguidos"
 },
 {
     "title":"Fuera",
@@ -91,7 +91,7 @@
 },
 {
     "title":"Habitacion numero 5",
-    "body":"Recita en voz alta el trabalenguas de la puerta"
+    "body":"Recita en voz alta el trabalenguas de al lado de la puerta"
 },
 {
     "title":"Habitacion de la TV",
