--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 },
 {
     "title":"Entrance - Outside",
-    "body":"Tap the balloon and keep it in the air for 15 secs"
+    "body":"Tap the balloon and keep it in the air with at least 15 taps in a row"
 },
 {
     "title":"Outside",
@@ -91,7 +91,7 @@
 },
 {
     "title":"Room number 5",
-    "body":"Recite the riddle on the door"
+    "body":"Recite the riddle next the door"
 },
 {
     "title":"TV Room",
