--- a/esp.html
+++ b/esp.html
@@ -75,7 +75,7 @@
 },
 {
     "title":"Entrada - Fuera",
-    "body":"Manten el globo en el aire dandole al menos 15 golpecitos seguidos"
+    "body":"Pliega y despliega la tumbona"
 },
 {
     "title":"Fuera",
@@ -108,6 +108,18 @@
 {
     "title":"Coworking",
     "body":"Tira los dados hasta que salga un numero doble"
+},
+{
+    "title":"Segunda Planta",
+    "body":"Cuenta los caramelos del cubo"
+},
+{
+    "title":"Segunda Planta",
+    "body":"Sigue con el dedo el camino mas corto de Xert a Culla en el mapa"
+},
+{
+    "title":"Segunda Planta",
+    "body":"Bebete uno de los chupitos y rellenalo del mismo liquido"
 }
 ]
 '></data>
