--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 },
 {
     "title":"Entrance - Outside",
-    "body":"Tap the balloon and keep it in the air with at least 15 taps in a row"
+    "body":"Unfold and fold the chair"
 },
 {
     "title":"Outside",
@@ -108,6 +108,18 @@
 {
     "title":"Coworking",
     "body":"Roll a double number with the two dice"
+},
+{
+    "title":"Second Floor",
+    "body":"Drink one of the shoots. And refill it with the same liquid afterwards"
+},
+{
+    "title":"Second Floor",
+    "body":"Find the shortest way from Xert to Culla in the map"
+},
+{
+    "title":"Second Floor",
+    "body":"Count the candy in the bucket"
 }
 ]
 '></data>
