--- a/esp.html
+++ b/esp.html
@@ -58,6 +58,14 @@
 <data class="json-data" value='
 [
 {
+    "title":"Baño de minusvalidos (Coworking)",
+    "body":"Sientate en el WC durante 20 segundos"
+},
+{
+    "title":"Comedor",
+    "body":"Toca 10 murcielagos uno a uno con la mano"
+},
+{
     "title":"Cocina",
     "body":"Juega con la consola durante 30 segundos o hasta que hagas 100 puntos en el tetris"
 },
