--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
 <data class="json-data" value='
 [
 {
+    "title":"Coworking disabled toilet",
+    "body":"Sit in the toilet for 20 secs"
+},
+{
+    "title":"Dining Room",
+    "body":"Touch 10 bats one by one with your hand"
+},
+{
     "title":"Kitchen",
     "body":"Play with the game console for 30 sec or score 100 points at tetris"
 },
